--- a/abc.html
+++ b/abc.html
@@ -11,30 +11,51 @@ h1 {
 margin-bottom: 15px;
 }
 div{ 
-#p1,#p2,#p3 {border: 2px solid black; padding-right: 30px;} p {width: 90%;height: 100px;margin-right: auto;margin-left: auto;font-family: helvetica;margin-bottom: 15px;background-color: gray;
+
+}
+#p1,#p2,#p3 {
+border: 2px solid black; 
+padding-right: 30px;
+} p{
+width: 90%;
+height: 100px;
+margin-right: auto;
+margin-left: auto;
+font-family: helvetica;
+margin-bottom: 15px;
+background-color: gray;
 }
  .row {
 width: 100%;
  }
  @media (min-width: 1200px) { 
-.class1, .class2, .class3
-{ 
-float: left;
+.class1, .class2, .class3{ 
+ float: left;
  }
  }
  #p1{
- width: 50%; position: relative; top: 60px; left: 50px;
+ width: 50%;
+ position: relative;
+ top: 60px; 
+left: 50px;
  } 
 #p2{ 
-position: relative; top: 60px; left: 60px; width: 50%;
+position: relative; 
+top: 60px;
+ left: 60px;
+ width: 50%;
  }
  #p3{
- position: relative; top: 60px; left: 70px; width: 50%;
+ position: relative;
+ top: 60px; 
+left: 70px;
+ width: 50%;
  }
  }
  @media (min-width: 950px) and (max-width: 1199px) {
  .class1,.class2,.class3{ 
-float: left; border: 1px solid black;
+float: left; 
+border: 1px solid black;
  }
  .class1{
  width: 8.33%;
@@ -55,7 +76,8 @@ width: 50%;
  width: 100%;
  }
  h2,h3,h4 {
- font-size: 20px; border: 1px solid black;
+ font-size: 20px;
+ border: 1px solid black;
  }
  .head1{
  border: 1px solid red;
