--- a/form.html
+++ b/form.html
@@ -5,12 +5,13 @@
 <style type="text/css">
 body{
  margin:50 px;}
-table,th{
+table{
 			border: 2px solid black;
 			border-collapse: collapse;
 			padding: 4px;
 			padding-bottom: 1px;
 			border-spacing: 0.5px;
+                        background-color:blue;
 }
 </style>
 </head>
@@ -20,7 +21,7 @@ table,th{
  <table style="width:100%">
  <tr>
   <th>NAME</th>
-  <th><input type="text" placeholder="enter your name"></th>
+  <th><input type="text"></th>
 </tr>
 <tr>
  <th>SEX</th>
