--- a/form.html
+++ b/form.html
@@ -2,6 +2,8 @@
 <html>
 <head>
  <title>form elements</title>
+</head>
+<body>
 <style type="text/css">
 body{
  margin:50 px;}
@@ -14,11 +16,9 @@ table{
                         background-color:blue;
 }
 </style>
-</head>
-<body>
 <form>
 <div>
- <table style="width:100%">
+ <table>
  <tr>
   <th>NAME</th>
   <th><input type="text"></th>
@@ -36,6 +36,7 @@ table{
 <th><input type="radio" name="Degree">Degree</th><br>
 <th><input type="radio" name="other">OTHER</th><br>
 </tr>
+</table>
 </form>
 </body>
 </html>
