--- a/form.html
+++ b/form.html
@@ -9,8 +9,8 @@ body{
  margin:50 px;}
 table{
 			border: 2px solid black;
-			border-collapse: collapse;
-			padding: 4px;
+		
+		        padding:14px;
 			padding-bottom: 1px;
 			border-spacing: 0.5px;
                         background-color:grey;
@@ -45,6 +45,9 @@ table{
  <option value="bussiness">Business</option>
  <option vakue="other>Other</option>
 </select><br>
+<tr>
+<th><input type="submit">Ok</th>
+</tr>
 </table>
 </form>
 </body>
