--- a/form.html
+++ b/form.html
@@ -25,6 +25,7 @@ table{
 </tr>
 <tr>
  <th>SEX</th>
+ <th><input type="radio" name="gender"></th>
  <th><input type="radio" name="gender" value="male>Male</th><br>
 <th><input type="radio" name="gender" value="Female">Female</th><br>
 <th><input type="radio" name="gender" value="others">Other</th><br>
@@ -45,9 +46,10 @@ table{
  <option value="bussiness">Business</option>
  <option vakue="other>Other</option>
 </select><br>
+</th>
 </tr>
 <tr>
-<th><input type="submit">Ok</th>
+<th><input type="submit" name="Ok"></th>
 </tr>
 </table>
 </form>
