--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@ table{
 </style>
 <form>
 <div>
- <table style="width:100%">
+ <table style="width:100%"><center>
  <tr>
   <th>NAME</th>
   <th><input type="text"></th>
@@ -49,8 +49,10 @@ table{
 </th>
 </tr>
 <tr>
+<center>
 <th><input type="submit" name="Ok"></th>
-</tr>
+</tr></center>
+</center>
 </table>
 </form>
 </body>
